--- a/qtfuzzylite/ui/Control.ui
+++ b/qtfuzzylite/ui/Control.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>266</width>
-    <height>475</height>
+    <height>466</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -39,6 +39,19 @@
      <property name="bottomMargin">
       <number>0</number>
      </property>
+     <item>
+      <widget class="QLabel" name="lbl_var_name">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Ignored" vsizetype="Preferred">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_4">
        <property name="leftMargin">
@@ -75,11 +88,14 @@
          <property name="autoFillBackground">
           <bool>false</bool>
          </property>
+         <property name="maximum">
+          <number>1000</number>
+         </property>
          <property name="singleStep">
-          <number>10</number>
+          <number>50</number>
          </property>
          <property name="pageStep">
-          <number>1</number>
+          <number>50</number>
          </property>
          <property name="value">
           <number>0</number>
