--- a/qtfuzzylite/ui/Term.ui
+++ b/qtfuzzylite/ui/Term.ui
@@ -46,6 +46,17 @@
      <item>
       <widget class="QLineEdit" name="led_name"/>
      </item>
+     <item>
+      <widget class="QToolButton" name="btn_wizard">
+       <property name="text">
+        <string>Create multiple copies of current term</string>
+       </property>
+       <property name="icon">
+        <iconset resource="resources.qrc">
+         <normaloff>:/icons/icons/wizard.png</normaloff>:/icons/icons/wizard.png</iconset>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
    <item>
@@ -152,7 +163,7 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>102</width>
+              <width>182</width>
               <height>146</height>
              </rect>
             </property>
@@ -214,8 +225,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>122</width>
-              <height>80</height>
+              <width>195</width>
+              <height>114</height>
              </rect>
             </property>
             <attribute name="label">
@@ -256,8 +267,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>126</width>
-              <height>80</height>
+              <width>195</width>
+              <height>114</height>
              </rect>
             </property>
             <attribute name="label">
@@ -298,8 +309,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>124</width>
-              <height>82</height>
+              <width>195</width>
+              <height>114</height>
              </rect>
             </property>
             <attribute name="label">
@@ -385,7 +396,7 @@
               <x>0</x>
               <y>0</y>
               <width>195</width>
-              <height>145</height>
+              <height>83</height>
              </rect>
             </property>
             <attribute name="label">
@@ -426,7 +437,7 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>138</width>
+              <width>211</width>
               <height>113</height>
              </rect>
             </property>
@@ -478,7 +489,7 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>102</width>
+              <width>211</width>
               <height>146</height>
              </rect>
             </property>
@@ -549,8 +560,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>187</width>
-              <height>80</height>
+              <width>199</width>
+              <height>116</height>
              </rect>
             </property>
             <attribute name="label">
@@ -598,8 +609,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>126</width>
-              <height>80</height>
+              <width>199</width>
+              <height>116</height>
              </rect>
             </property>
             <attribute name="label">
@@ -637,8 +648,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>126</width>
-              <height>80</height>
+              <width>199</width>
+              <height>116</height>
              </rect>
             </property>
             <attribute name="label">
